# ftw

./: .dockerignore  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  Dockerfile.optimizer  Dockerfile.relay  Dockerfile.updater  MIGRATION.md  Makefile  NOTICE  README.md  SUPPORT.md  TRADEMARKS.md  config.example.minimal.yaml  config.example.yaml  config.hw-ci.example.yaml  config.local.example.yaml  docker-compose.e2e-tier2.yml  docker-compose.e2e.yml  docker-compose.macos.yml  docker-compose.yml  package-lock.json  package.json
.changeset/: README.md  actionable-driver-updates.md  add-home-link-four-reads.md  add-home-link-relay.md  apache-2.0-license.md  approval-ux-redesign.md  arbitrage-cover-load-charge-slot.md  arbitrage-cover-load-reactive.md  arbitrage-cycle-threshold.md  atomic-control-plane-pair-v2.md  atomic-control-plane-pair.md  backend-safety-fixes.md  battery-node-target-overflow.md  block-core-update-without-optimizer.md  boot-health-shim.md  bootstrap-optimizer-release-line.md  bounded-loadpoint-battery-boost.md  bright-optimal-heart.md  bright-prices-guide.md  bright-recursive-shadow.md  bright-remote-turn.md  caldav-planner-constraints.md  config.json  (+184 more)
optimizer/: pyproject.toml
optimizer/ftw_optimizer/: __init__.py  backtest.py  direct_highs.py  healthcheck.py  model.py  multistage.py  progressive.py  protocol.py  recourse.py  release_version.py  replay.py  scenario_tree.py  worker.py
optimizer/tests/: test_backtest.py  test_horizon.py  test_model.py  test_release_contract.py  test_worker.py
(+1018 files in other folders)
